--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "new_trello",
+  "name": "to-do-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "firebase": "^9.6.3",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "uid": "^2.0.0",
-    "web-vitals": "^2.1.3"
+    "react-onclickout": "^2.0.8",
+    "react-scripts": "^5.0.0",
+    "react-textarea-autosize": "^8.3.3",
+    "sass": "^1.43.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
